--- a/src/views/login.fxml
+++ b/src/views/login.fxml
@@ -19,7 +19,8 @@
     </rowConstraints>
     <children>
         <TextField fx:id="name_txt" onAction="#sendLogin" promptText="Username" />
-        <PasswordField fx:id="pwd_txt" onAction="#sendLogin" promptText="Password" GridPane.rowIndex="1" />
+        <PasswordField fx:id="pwd_txt" onAction="#sendLogin" promptText="Password" GridPane.rowIndex="1"/>
+        <Button fx:id="cancel_bt" mnemonicParsing="false" onAction="#cancelLogin" text="Cancel" GridPane.rowIndex="2" GridPane.columnIndex="1" />
         <Button fx:id="login_bt" mnemonicParsing="false" onAction="#sendLogin" text="Login" GridPane.rowIndex="2" />
     </children>
 </GridPane>
