--- a/src/views/main.fxml
+++ b/src/views/main.fxml
@@ -7,9 +7,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<?import javafx.scene.control.TextArea?>
-<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="controller.MainController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
     <columnConstraints>
         <ColumnConstraints />
         <ColumnConstraints />
@@ -34,7 +32,7 @@
             </rowConstraints>
             <children>
                 <Label fx:id="ball_lbl" text="Magic 8 Ball says..." />
-                <Label fx:id="answer_lbl"  GridPane.rowIndex="1" />
+                <Label fx:id="answer_lbl" textFill="#fa05ea" GridPane.rowIndex="1" />
                 <Label text="Your question:" GridPane.rowIndex="2" />
                 <TextField fx:id="question_txt" GridPane.rowIndex="3" />
                 <Button fx:id="ask_bt" mnemonicParsing="false" onAction="#ask" text="Ask" GridPane.rowIndex="4" />
